--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -46,7 +46,7 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
       </div>
     </article>
 
-    <article class="flex flex-col gap-8">
+    <!-- <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
         <h3 class="text-lg text-neutral-100">Latest posts</h3>
         <Link href="/posts" label="See all posts" isUnderline target="_self" />
@@ -68,7 +68,7 @@ const posts = (await getCollection("posts")).sort(function (first, second) {
               ))
         }
       </section>
-    </article>
+    </article> -->
 
     <article class="flex flex-col gap-8">
       <header class="flex w-full flex-row justify-between gap-2">
